--- a/index.html
+++ b/index.html
@@ -11,34 +11,34 @@
   <body>
     <div class="calculator">
       <div class="calc-screen">
-        <div class="calc-values">234 + 234</div>
-        <div class="calc-currValues">468</div>
+        <div class="calc-prevValues"></div>
+        <div class="calc-currValues">0</div>
       </div>
       <div class="calc-options">
-        <button class="btn">Delete</button>
-        <button class="btn">Clear</button>
+        <button class="btn delete">Delete</button>
+        <button class="btn clear">Clear</button>
       </div>
       <div class="calc-buttons">
         <div class="btn-numpad">
-          <button class="btn" data-number="7">7</button>
-          <button class="btn" data-number="8">8</button>
-          <button class="btn" data-number="9">9</button>
-          <button class="btn" data-operator="+">+</button>
+          <button class="btn" data-number>7</button>
+          <button class="btn" data-number>8</button>
+          <button class="btn" data-number>9</button>
+          <button class="btn" data-operator>+</button>
 
-          <button class="btn" data-number="4">4</button>
-          <button class="btn" data-number="5">5</button>
-          <button class="btn" data-number="6">6</button>
-          <button class="btn" data-operator="-">-</button>
+          <button class="btn" data-number>4</button>
+          <button class="btn" data-number>5</button>
+          <button class="btn" data-number>6</button>
+          <button class="btn" data-operator>-</button>
 
-          <button class="btn" data-number="1">1</button>
-          <button class="btn" data-number="2">2</button>
-          <button class="btn" data-number="3">3</button>
-          <button class="btn" data-operator="/">/</button>
+          <button class="btn" data-number>1</button>
+          <button class="btn" data-number>2</button>
+          <button class="btn" data-number>3</button>
+          <button class="btn" data-operator>/</button>
 
-          <button class="btn" >.</button>
-          <button class="btn" data-number="0">0</button>
-          <button class="btn" data-operator="=">=</button>
-          <button class="btn" data-operator="*">*</button>
+          <button class="btn" data-number>.</button>
+          <button class="btn" data-number>0</button>
+          <button class="btn equals-btn">=</button>
+          <button class="btn" data-operator>*</button>
         </div>
       </div>
     </div>
